--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/gamestop
 spring.datasource.username=root
 spring.datasource.password=
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
+
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+
+#spring.datasource.hikari.maximum-pool-size=1000
